GenericTabset Builder/main/default/objects/LTX_Identification__c/fields/LTX_Contact__c.field-meta.xml
<CustomField>
    <fullName>LTX_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Identifications</relationshipLabel>
    <relationshipName>Identifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>