GenericTabset Builder/main/default/objects/LTX_Identification__c/fields/LTX_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>LTX_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>