GenericTabset Builder/main/default/objects/LTX_Identification__c/fields/LTX_Id_No__c.field-meta.xml
<CustomField>
    <fullName>LTX_Id_No__c</fullName>
    <label>Id No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>