GenericTabset Builder/main/default/objects/LTX_Identification__c/fields/LTX_State__c.field-meta.xml
<CustomField>
    <fullName>LTX_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>